--- a/apps/condo/domains/common/components/MenuItem.module.css
+++ b/apps/condo/domains/common/components/MenuItem.module.css
@@ -4,23 +4,22 @@
   align-items: center;
   justify-content: flex-start;
   padding: 12px 0;
-  color: var(--condo-global-color-gray-7);
   vertical-align: center;
   border-radius: 8px;
   cursor: pointer;
 }
 
-.menu-item-wrapper:hover,
-.menu-item-wrapper.active {
-  color: var(--condo-global-color-black);
-}
-
-.condo-typography,
-.icon {
+.menu-item-wrapper .menu-item * {
+  color: var(--condo-global-color-gray-7);
   transition: var(--condo-global-transition-duration-default);
 }
 
-.condo-typography {
+.menu-item-wrapper:hover .menu-item *,
+.menu-item-wrapper.active .menu-item * {
+  color: var(--condo-global-color-black) !important;
+}
+
+.menu-item-wrapper .condo-typography {
   width: max-content;
 }
 
