--- a/apps/condo/domains/common/components/ResidentActions/ResidentActions.module.css
+++ b/apps/condo/domains/common/components/ResidentActions/ResidentActions.module.css
@@ -17,10 +17,14 @@
   background: transparent;
 }
 
-.menu-wrapper > ul > li:hover > span > a > div {
-  color: var(--condo-global-color-black);
-}
-
 .accent-button {
   cursor: default !important;
+}
+
+.condo-dropdown-menu-title-content > a::after {
+  display: none !important;
+}
+
+.menu-wrapper a::after {
+  display: none;
 }
