fix(ui): DOMA-11759 fix disable

--- a/packages/ui/src/components/Input/style.less
+++ b/packages/ui/src/components/Input/style.less
@@ -67,7 +67,6 @@
 }
 
 .condo-input-focused,
-.condo-input-affix-wrapper-focused,
 .condo-input-wrapper-focused:not(:disabled) {
   border-color: @condo-global-color-gray-7;
   box-shadow: none;
@@ -114,7 +113,8 @@
 
 .condo-input-affix-wrapper-disabled,
 .condo-input-disabled[disabled],
-.condo-input[disabled] {
+.condo-input[disabled],
+.condo-input-disabled {
   color: @condo-global-color-black;
   background-color: @condo-global-color-white;
   opacity: @condo-global-opacity-disabled;
