--- a/packages/ui/src/components/ActionBar/style.less
+++ b/packages/ui/src/components/ActionBar/style.less
@@ -9,6 +9,10 @@
 @condo-action-bar-large-screen-bottom-indent: @condo-global-spacing-24;
 @condo-action-bar-container-padding: @condo-global-spacing-40;
 
+.condo-affix-placeholder {
+  height: @condo-action-bar-large-screen-bottom-indent;
+}
+
 .condo-affix-content-wrapper {
   box-sizing: border-box;
   height: fit-content !important;
