--- a/apps/condo/domains/common/components/ResidentActions/ResidentActions.module.css
+++ b/apps/condo/domains/common/components/ResidentActions/ResidentActions.module.css
@@ -21,6 +21,10 @@
   cursor: default !important;
 }
 
+.accent-button .condo-btn-text {
+  color: red !important;
+}
+
 .condo-dropdown-menu-title-content > a::after {
   display: none !important;
 }
