--- a/apps/condo/domains/common/components/Comments/Comments.module.css
+++ b/apps/condo/domains/common/components/Comments/Comments.module.css
@@ -133,3 +133,9 @@
   justify-content: space-between;
   width: 100%;
 }
+
+.tooltip-button-container {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
