--- a/apps/condo/domains/ticket/components/ClientCard/ClientAddressCard.module.css
+++ b/apps/condo/domains/ticket/components/ClientCard/ClientAddressCard.module.css
@@ -1,30 +1,35 @@
 .address-tab-wrapper > div {
   height: 100%;
-  padding: 20px;
+  padding: var(--condo-global-spacing-20);
   background-color: white;
-  border-radius: 11px;
+  border-radius: var(--condo-global-spacing-12);
 }
 
 .address-tab-content > div {
   display: flex;
   flex-direction: column;
-  row-gap: 12px;
+  row-gap: var(--condo-global-spacing-12);
 }
 
 .address-tab-wrapper {
   height: 165px;
   padding: 1px;
-  border: 1px solid #e6e8f1;
-  border-radius: 12px;
-  transition: all 0.3s;
+  border: 1px solid var(--condo-global-color-gray-5);
+  border-radius: var(--condo-global-spacing-12);
+  transition: all var(--condo-global-transition-duration-default);
 }
 
 .address-tab-wrapper[data-active="true"] {
-  background: linear-gradient(115deg, #4cd174 16%, #6db8f2 84%);
+  background: var(--condo-global-color-brand-gradient-7);
+  border: none;
   box-shadow: var(--condo-global-box-shadow-default);
 }
 
 .address-tab-wrapper:hover {
   box-shadow: inherit;
   cursor: pointer;
+}
+
+.address-search-tab-wrapper {
+  justify-content: center;
 }
