--- a/apps/condo/pages/phone/[number]/index.module.css
+++ b/apps/condo/pages/phone/[number]/index.module.css
@@ -6,7 +6,8 @@
 
 .custom-carousel-wrapper :global(.condo-carousel .slick-list) {
   width: calc(100% + 24px);
-  margin: 0;
+  margin: -20px 0;
+  padding: 20px 0;
 }
 
 .custom-carousel-wrapper :global(.condo-carousel .slick-list .slick-track .slick-slide) {
