feat(condo): DOMA-11833 fix after review

--- a/apps/condo/domains/news/components/NewsForm/InputStep/InputStepForm.module.css
+++ b/apps/condo/domains/news/components/NewsForm/InputStep/InputStepForm.module.css
@@ -1,4 +1,5 @@
-.custom-form {
-  min-height: 500px;
-  margin-left: -10px;
+.default-ai-text-area-wrapper {
+  padding-bottom: 0;
+  container-type: inline-size;
+  transition: all var(--condo-global-transition-duration-default) ease-in-out;
 }
