--- a/packages/ui/src/components/style/core/global.less
+++ b/packages/ui/src/components/style/core/global.less
@@ -5,42 +5,41 @@
 
 /* wix-madefor-display-regular - cyrillic_cyrillic-ext_latin_latin-ext */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Wix Madefor Display';
-  font-style: normal;
+  font-display: swap;
   font-weight: 400;
-  src: url('/public/fonts/wix-madefor-display/wix-madefor-display-v11-cyrillic_cyrillic-ext_latin_latin-ext-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-family: "Wix Madefor Display";
+  font-style: normal;
+  src: url("/public/fonts/wix-madefor-display/wix-madefor-display-v11-cyrillic_cyrillic-ext_latin_latin-ext-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* wix-madefor-display-600 - cyrillic_cyrillic-ext_latin_latin-ext */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Wix Madefor Display';
-  font-style: normal;
+  font-display: swap;
   font-weight: 600;
-  src: url('/public/fonts/wix-madefor-display/wix-madefor-display-v11-cyrillic_cyrillic-ext_latin_latin-ext-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-family: "Wix Madefor Display";
+  font-style: normal;
+  src: url("/public/fonts/wix-madefor-display/wix-madefor-display-v11-cyrillic_cyrillic-ext_latin_latin-ext-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* wix-madefor-display-700 - cyrillic_cyrillic-ext_latin_latin-ext */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Wix Madefor Display';
-  font-style: normal;
+  font-display: swap;
   font-weight: 700;
-  src: url('/public/fonts/wix-madefor-display/wix-madefor-display-v11-cyrillic_cyrillic-ext_latin_latin-ext-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-family: "Wix Madefor Display";
+  font-style: normal;
+  src: url("/public/fonts/wix-madefor-display/wix-madefor-display-v11-cyrillic_cyrillic-ext_latin_latin-ext-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 // Monospace font is used for code blocks
 
 /* noto-sans-mono-regular - cyrillic_cyrillic-ext_latin_latin-ext */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Noto Sans Mono';
-  font-style: normal;
+  font-display: swap;
   font-weight: 400;
-  src: url('/public/fonts/noto-sans-mono/noto-sans-mono-v32-cyrillic_cyrillic-ext_latin_latin-ext-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-family: "Noto Sans Mono";
+  font-style: normal;
+  src: url("/public/fonts/noto-sans-mono/noto-sans-mono-v32-cyrillic_cyrillic-ext_latin_latin-ext-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
-
 
 @text-color: @condo-global-color-black;
 @heading-color: @condo-global-color-black;
